Prod-EU/force-app/main/default/objects/Product_Schedule__c/Product_Schedule__c.object-meta.xml
<CustomObject>
    <description>Jagan 05/04/2017 - This object is a child object for Related Products, which will record all the shipment information required for Germany payors.</description>
    <label>Product Schedule</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>