Prod-EU/force-app/main/default/objects/Product_Schedule__c/fields/Admin_Price__c.field-meta.xml
<CustomField>
    <fullName>Admin_Price__c</fullName>
    <description>This field is used in ClsOpportunityTriggerHandler. Only for admin purpose.</description>
    <label>Admin Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>