Prod-EU/force-app/main/default/objects/Product_Schedule__c/fields/Medical_Advice_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number_Id__c</fullName>
    <formula>CASESAFEID(Product__r.Medical_Advice_Number__c)</formula>
    <label>Medical Advice Number Id</label>
    <type>Text</type>
</CustomField>