Prod-EU/force-app/main/default/objects/Product_Schedule__c/fields/Number_Of_Days_Between_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Between_Orders__c</fullName>
    <label>Number Of Days Between Orders</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>