Prod-EU/force-app/main/default/objects/Product_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Field pointing to parent object Related Product</description>
    <label>Product</label>
    <referenceTo>Related_Product__c</referenceTo>
    <relationshipLabel>Product Schedule</relationshipLabel>
    <relationshipName>Product_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>